--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+/** @format */
+
+* {
+	margin: 0;
+}
+.app {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	background-color: #e2e8f0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+	display: flex;
+	justify-content: space-between;
+	height: 70px;
+	margin-bottom: -30px;
+	background-color: #0c4a6e;
+	color: white;
+	padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.body_container {
+	display: flex;
+	flex-direction: row;
+	padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.left_container {
+	display: flex;
+	flex-direction: column;
+	flex: 0.7;
+	margin-right: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.cards {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.right_container {
+	display: flex;
+	flex-direction: column;
+	flex: 0.3;
 }
