--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,48 @@
 	align-items: center;
 }
 
+.chart {
+	display: flex;
+	flex-direction: column;
+	height: 450px;
+	/* border: 1px red solid; */
+	background-color: #fffafa;
+	color: black;
+}
+
 .right_container {
 	display: flex;
 	flex-direction: column;
 	flex: 0.3;
+
+	background-color: white;
+	height: auto;
+}
+
+.table__container {
+	display: flex;
+	flex-direction: column;
+}
+
+@media (max-width: 1100px) {
+	.app {
+		display: flex;
+		flex-direction: column;
+		width: 100vw;
+		height: 100vh;
+	}
+
+	.body_container {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.cards {
+		display: flex;
+		flex-direction: column;
+		justify-content: start;
+		align-items: flex-start;
+		flex-wrap: wrap;
+		margin-bottom: 10px;
+	}
 }
